# jaffle_shop

./: pyproject.toml  setup.py
tutorial_dbt_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tutorial_template/jaffle_shop/: .user.yml  profiles.yml  tutorial.duckdb
tutorial_template/jaffle_shop/config/: profiles.yml
tutorial_template/jaffle_shop/models/: sources.yml
tutorial_template/jaffle_shop/models/staging/: stg_customers.sql  stg_customers_again.sql
tutorial_template/tutorial_dbt_dagster/: __init__.py
tutorial_template/tutorial_dbt_dagster/assets/: __init__.py
