[tool.poetry]
name = "dagster-lab"
version = "0.1.0"
description = ""
authors = ["Benji Stephenson <bjames.stephenson@gmail.com>"]
readme = "README.md"
packages = [{ include = "dagster_lab" }]

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.3.0"
dagit = "^1.3.0"
pip = "^23.1"
dbt-postgres = "^1.4.6"
dbt-snowflake = "^1.4.2"


[build-system]
requires = ["poetry-core", "setuptools"]
#build-backend = "poetry.core.masonry.api"
build-backend = "setuptools.build_meta"
